CSS changes for menu visuals and spacing.  Porticos logo fix.

--- a/porticos-react/src/index.css
+++ b/porticos-react/src/index.css
@@ -1,16 +1,3 @@
-/*
-=============== 
-Variables
-===============
-*/
-
-
-/*
-=============== 
-Global Styles
-===============
-*/
-
 *,
 ::after,
 ::before {
@@ -18,8 +5,6 @@ Global Styles
   padding: 0;
   box-sizing: border-box;
 }
-
-
 
  body {
   margin: 0;
@@ -62,7 +47,6 @@ Global Styles
     --clr-white: #fff;
     --clr-gold: #98dace;
    
-  
     --clr-red-dark: hsl(360, 67%, 44%);
     --clr-red-light: hsl(360, 71%, 66%);
     --clr-green-dark: hsl(125, 67%, 44%);
@@ -137,9 +121,7 @@ Global Styles
       line-height: 1;
     }
   }
-  /*  global classes */
-  
-  /* section */
+ 
   .section {
     width: 90vw;
     margin: 0 auto;
@@ -151,32 +133,12 @@ Global Styles
       width: 95vw;
     }
   }
-  
-  /*
-  =============== 
-  Menu
-  ===============
-  */
-  
-  .menu {
-    padding: 5rem 0;
-  }
-  .title {
-    text-align: center;
-    margin-bottom: 2rem;
-  }
-  .underline {
-    width: 5rem;
-    height: 0.25rem;
-    background: var(--clr-gold);
-    margin-left: auto;
-    margin-right: auto;
-  }
+
   .btn-container {
     
       position: absolute;
-      right: 400px;
-      top: 1120px;
+      right: 490px;
+      top: 955px;
          /* dark shades of primary color*/
     --clr-primary-1: hsl(205, 86%, 17%);
     --clr-primary-2: hsl(205, 77%, 27%);
@@ -203,7 +165,7 @@ Global Styles
     --clr-grey-9: hsl(212, 33%, 89%);
     --clr-grey-10: hsl(210, 36%, 96%);
     --clr-white: #fff;
-    --clr-gold:  blue;
+    --clr-gold: black;
   
     --clr-red-dark: hsl(360, 67%, 44%);
     --clr-red-light: hsl(360, 71%, 66%);
@@ -220,7 +182,7 @@ Global Styles
 
   }
   .filter-btn {
-    background: transparent;
+    background:#98dace;
     border-color: transparent;
     font-size: 1rem;
     text-transform: capitalize;
@@ -234,7 +196,8 @@ Global Styles
     
   }
   .filter-btn:hover {
-    background: var(--clr-gold);
+    --clr-hover:black;
+    background: var(--clr-hover);
     color: var(--clr-white);
   }
 
@@ -288,8 +251,13 @@ Global Styles
     }
   }
 
-  
-
+  @media screen and (min-width: 2560px)  {
+    .btn-container{
+    position: absolute;
+    right: 830px;
+    top: 950px;
+    }
+  }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
